<resources>
    <string name="app_name">Health</string>
    <string name="title_home">Home</string>
    <string name="title_goals">Goals</string>
    <string name="title_workout">Workout</string>
    <string name="title_shop">Shop</string>
    <string name="title_settings">Settings</string>
    <string name="username">Joe Schmoe</string>
    <string name="level">Lvl. 0</string>
    
        <string name="app_name">Health</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_workout_history">Workout History</string>>

    <string name="pref_title_display_name">Creature Name</string>
    <string name="pref_default_display_name">Fluffy</string>


    <string name="pref_title_break_duration">Break Duration</string>

    <string-array name="break_duration_titles">
    <item>2 minutes</item>
    <item>3 minutes</item>
    <item>5 minutes</item>
    <item>10 minutes</item>
    <item>15 minutes</item>
    </string-array>


    <string-array name="break_duration_values">
    <item>2</item>
    <item>3</item>
    <item>5</item>
    <item>10</item>
    <item>15</item>
    </string-array>

    <string name="pref_title_measures">Measurement System</string>
    <string-array name="measures_titles">
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>




    <!-- Settings for Data & Sync, not sure if we actually need this -->

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>



    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Settings for Notifications -->

    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_next_workout">Next Workout Cue</string>

    <string name="pref_title_workout_reminder">Workout Reminder</string>
    <string-array name="pref_workout_reminder_titles">
        <item>7 AM </item>
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 PM</item>
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>
        <item>7 PM</item>
        <item>8 PM</item>
        <item>9 PM</item>
        <item>10 PM</item>
    </string-array>





    <string name="open_settings">Open Settings</string>
    <string name="read_setting">Read Setting</string>
    <string name="pref_ringtone_silent">Silent Ringtone</string>
    
</resources>

