<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_goals"
        android:icon="@drawable/ic_check_circle_black_24dp"
        android:title="@string/title_goals" />
    <item
        android:id="@+id/nav_workout"

        android:title="@string/title_workout" />
    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_shop" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>